# MedBox

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: ApplicationFactory.h  Builder.h  CellSize.h  Decimator.h  Edge.h  Image.h  ImageCollection.h  IndexedTriangle.h  IndexedVertex.h  LineSegment.h  LookUpTable.h  MarchingCube.h  Mesh.h  Normal.h  OrderedPair.h  Plane.h  Recorder.h  Segmentation.h  Smoother.h  Triangle.h  Vector.h  Vertex.h  filter.h  grid.h
src/: ApplicationFactory.cpp  Builder.cpp  Decimator.cpp  Image.cpp  ImageCollection.cpp  MarchingCube.cpp  Mesh.cpp  Recorder.cpp  Smoother.cpp  filter.cpp  main.cpp
